fix overflow issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "./scss/index.scss";
 .main {
+  overflow: hidden;
   padding-bottom: 100px;
   @include mq("tablet", "min") {
     width: 1152px;
