--- a/src/components/Asset/Asset.scss
+++ b/src/components/Asset/Asset.scss
@@ -98,7 +98,7 @@
         }
       }
       @include flex(column);
-      @include center;
+      align-items: center;
     }
   }
 }
